# HarmonicExplorer

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/HarmonicExplorer/: PluginEditor.h  PluginProcessor.h  SynthAudioSource.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  SynthAudioSource.cpp
